# tag-machine

./: .gitignore  LICENSE  dynamic.yaml  traefik.toml  traefik.yaml
api/: .gitignore  Cargo.toml  pyproject.toml  setup.cfg
api/src/: lib.rs
api/src/tag_machine_api/: __init__.py
prediction-server/: Dockerfile  Models.py  MultiModel.py  prediction_server.py  trim-model.py
prediction-server/tag_assoc_model/: tag_to_id.json
prediction-server/tag_assoc_model.old/: tag_to_id.json
rust-api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  schema.sql
rust-api/src/: auth.rs  database.rs  error.rs  errors.rs  integration_test.rs  main.rs  search_query.rs  tags.rs
ui/: .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc  Caddyfile  Dockerfile  ParseWikis.ipynb  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/src/: ActiveTagList.tsx  AdminPopup.tsx  App.tsx  BoundingBoxMode.tsx  CaptionEditor.tsx  CaptionMode.tsx  CommandPalette.tsx  DTextDisplay.tsx  ErrorMessage.tsx  ImageControls.tsx  ImageDisplay.tsx  ImageInfoPopup.tsx  Llama3TokenizerProxy.ts  LoginWindow.tsx  Menu.tsx  Popup.tsx  RegisterWindow.tsx  SaveButton.tsx  SuggestedTags.tsx  TagAssociations.tsx  TagList.tsx  TagListUI.tsx  TaggingMode.tsx  TaskControls.tsx  UploadPopup.tsx  UserPopup.tsx  VQAAIConfigPopup.tsx  VQAEditor.tsx  VQAMode.tsx  VQATaskMode.tsx  WikiPopup.tsx  api.ts  llama3Tokenizer.d.ts  llama3Tokenizer.js  main.tsx  search_grammar.ne  state.tsx  style.css  turnstile.tsx  useLocalStateStorage.ts
(+40 files in other folders)
