[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
anyhow = "1"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "time"] }
futures = { version = "0.3" }
bollard = "0.16"
tempfile = "3"
tokio = "1"
rand = "0.8"
hex = "0.4"
actix-files = "0.6"
actix-cors = "0.7"
actix-multipart = "0.6"
sha2 = "0.10.8"
time = { version = "0.3.36", features = ["serde"] }
async-stream = "0.3.5"
pathdiff = "0.2.1"
clap = { version = "4.5.7", features = ["derive"] }
image = "0.25.1"
mime = "0.3.17"
subtle = "2.6.1"
reqwest = { version = "0.12.7", features = ["rustls-tls", "multipart"] }